# heimlern

./: .ai-context.yml  .gitignore  .hauski-reports  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  push.err  requirements-tools.txt  sichter-reports  test_option  wgx
.wgx/: profile.yml
contracts/: README.md  aussen_event.schema.json  decision.outcome.schema.json  heimlern.ingest.state.schema.json  learning.proposal.registration.v1.schema.json  learning_path.schema.json  metrics.snapshot.schema.json  operator.routing_decision.v1.schema.json  operator.routing_outcome.v1.schema.json  policy.decision.schema.json  policy.feedback.schema.json  policy.snapshot.schema.json  policy.weight_adjustment.schema.json  policy_feedback.schema.json  policy_snapshot.schema.json
crates/heimlern-bandits/: Cargo.toml  README.md
crates/heimlern-bandits/examples/: bench_feedback.rs  decide.rs  integrate_hauski.rs
crates/heimlern-bandits/src/: error.rs  lib.rs
crates/heimlern-cli/: Cargo.toml  README.md
crates/heimlern-cli/src/: main.rs
crates/heimlern-cli/tests/: offline_learning_path.rs  response_deserialization.rs
crates/heimlern-feedback/: Cargo.toml  README.md
crates/heimlern-feedback/examples/: feedback_analysis.rs
crates/heimlern-feedback/src/: lib.rs  ola_adapter.rs
crates/heimlern-feedback/tests/: simulation_strategy.rs
docs/: archive-readiness.v1.json  chronik-routing-outcome-consumer.md  doc-freshness-registry.md  doc-freshness-registry.yml  historical-status.md  learning-cycle.md  operator-ecosystem-alignment.md  policies-os-context.md  policy-lifecycle.md
examples/: integrate_hauski.rs
heimgewebe-.ai-context.yml-sammlung/: aussensensor.ai-context.yml  chronik.ai-context.yml  contracts.ai-context.yml  leitstand.ai-context.yml  metarepo.ai-context.yml  vault-gewebe.ai-context.yml  wgx.ai-context.yml
merges/: heimlern_merge_2510262237__.github_workflows.md  heimlern_merge_2510262237__contracts.md  heimlern_merge_2510262237__data_samples.md  heimlern_merge_2510262237__docs.md  heimlern_merge_2510262237__index.md  heimlern_merge_2510262238__crates_heimlern-bandits.md  heimlern_merge_2510262238__crates_heimlern-bandits_examples.md  (+10 more)
proposals/: README.md  (+1 more)
(+92 files in other folders)
