[package]
name = "heimlern-bandits"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Simple bandit policies for heimlern"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
heimlern-core = { path = "../heimlern-core" }
thiserror = "1"
tracing = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
# Aktiviert strukturiertes Logging; ohne dieses Feature wird zu STDERR geloggt.
telemetry = ["tracing"]
