[package]
name = "heimlern-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI for Heimlern"

[[bin]]
name = "heimlern"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
ureq = { version = "2.9", features = ["json"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
heimlern-core = { path = "../heimlern-core" }
url = "2.5.8"
