[package]
name = "heimlern-feedback"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decision feedback analysis and policy weight tuning for heimlern"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
heimlern-core = { path = "../heimlern-core" }
time = { version = "0.3", features = ["formatting"] }
thiserror = "1"

[dev-dependencies]
